# Parallel-Programming

hook/pre-commit.d/: astyle.hook  timestamp.hook
hw1/: Makefile  bench.sh  pi.cpp  requirements
hw2/: cg.c  outLARGE  outMEDIUMN  outSMALL  result.md  run.sh
hw2/source/: description
hw3/: Makefile  integrate.c  prime.c
hw3/source/: description  integrate.c  prime.c
hw4/: Makefile  wave.cu
hw4/source/: Makefile  description  serial_wave.c
hw5/opencl/: Makefile  histogram.cl  histogram.cpp
hw5/serial/: Makefile  histogram.cpp
hw5/source/: description  histogram.cpp
project/cuda/: CMakeLists.txt  MMESKNN.cu  MMESKNN.hpp
project/opencl/: CMakeLists.txt  bgfg_KNN.cpp  main.cpp
project/opencl/opencl/: bgfg_knn.cl
project/openmp/: CMakeLists.txt  MMESKNN.cpp  MMESKNN.hpp  main.cpp
project/pthread/: CMakeLists.txt  MMESKNN.cpp  main.cpp
project/serial/: CMakeLists.txt  MMESKNN.cpp  MMESKNN.hpp  main.cpp
project/serialOpenCV/: MMESKNN.hpp
