cmake_minimum_required(VERSION 2.8)
project( project )
find_package( OpenCV REQUIRED )
find_package(CUDA QUIET REQUIRED)
CUDA_INCLUDE_DIRECTORIES(${CUDA_LIBRARY_DIRS} ${CUDA_curand_LIBRARY_DIRS})
CUDA_ADD_EXECUTABLE( main  MMESKNN.cu )
target_link_libraries( main ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} )
#set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11" )
#set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
